// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnumTabsCard Classic 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 44,
        "paddingLeft": 40,
        "paddingRight": 40,
        "paddingTop": 44,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 48,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 28,
            "width": 28,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 28,
              "width": 28,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              0.23921568627450981,
              0.23921568627450981,
              0.23921568627450981,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              0.23921568627450981,
              0.23921568627450981,
              0.23921568627450981,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={30}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 30,
              },
              Array [
                Object {
                  "color": "#3d3d3d",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginLeft": 16,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      Classic
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 20,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "#158CFB",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginRight": 10,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "#158CFB",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginRight": 10,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        1
        档
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#E3E9EE",
            "borderColor": "#fff",
            "borderRadius": 30,
            "height": 60,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#E3E9EE",
          },
          Object {
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <Text
            accessible={true}
            align={null}
            allowFontScaling={false}
            color={null}
            ellipsizeMode="tail"
            numberOfLines={1}
            size={28}
            style={
              Array [
                false,
                Array [
                  false,
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#333",
                      "fontSize": 28,
                    },
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#9CA3A9",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "textAlign": "center",
                      },
                      Array [
                        Array [
                          Object {
                            "opacity": 0,
                          },
                        ],
                        Object {},
                        undefined,
                      ],
                      Object {
                        "color": "#57BCFB",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "#fff",
                        "fontSize": 28,
                      },
                    ],
                  ],
                ],
              ]
            }
            type={null}
            weight={null}
          >
            1
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EnumTabsCard Classic set props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 28,
        "paddingBottom": 44,
        "paddingLeft": 40,
        "paddingRight": 40,
        "paddingTop": 44,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 48,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADMAAAAzCAYAAAA6oTAqAAAAEXRFWHRTb2Z0d2FyZQBwbmdjcnVzaEB1SfMAAABQSURBVGje7dSxCQBACARB+2/ab8BEeQNhFi6WSYzYLYudDQYGBgYGBgYGBgYGBgYGBgZmcvDqYGBgmhivGQYGBgYGBgYGBgYGBgYGBgbmQw+P/eMrC5UTVAAAAABJRU5ErkJggg==",
        }
      }
      style={
        Object {
          "borderRadius": 0,
          "height": 28,
          "width": 28,
        }
      }
    />
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color={null}
      ellipsizeMode="tail"
      size={30}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 30,
              },
              Array [
                Object {
                  "color": "#3d3d3d",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginLeft": 16,
                },
                Object {},
              ],
            ],
          ],
        ]
      }
      type={null}
      weight={null}
    >
      Classic
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 20,
        }
      }
    >
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "#158CFB",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginRight": 10,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        ·
      </Text>
      <Text
        accessible={true}
        align={null}
        allowFontScaling={false}
        color={null}
        ellipsizeMode="tail"
        size={30}
        style={
          Array [
            false,
            Array [
              false,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#333",
                  "fontSize": 30,
                },
                Object {
                  "color": "#158CFB",
                  "fontSize": 30,
                  "fontWeight": "normal",
                  "marginRight": 10,
                },
              ],
            ],
          ]
        }
        type={null}
        weight={null}
      >
        1
        档
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#E3E9EE",
            "borderColor": "#fff",
            "borderRadius": 30,
            "height": 60,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#E3E9EE",
          },
          Object {
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <Text
            accessible={true}
            align={null}
            allowFontScaling={false}
            color={null}
            ellipsizeMode="tail"
            numberOfLines={1}
            size={28}
            style={
              Array [
                false,
                Array [
                  false,
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#333",
                      "fontSize": 28,
                    },
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "#9CA3A9",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "textAlign": "center",
                      },
                      Array [
                        Array [
                          Object {
                            "opacity": 0,
                          },
                        ],
                        Object {},
                        undefined,
                      ],
                      Object {
                        "color": "#57BCFB",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "#fff",
                        "fontSize": 28,
                      },
                    ],
                  ],
                ],
              ]
            }
            type={null}
            weight={null}
          >
            1
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "width": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#57BCFB",
                  "borderRadius": 2,
                  "height": 4,
                  "width": 4,
                },
                Object {
                  "backgroundColor": "#158CFB",
                  "borderRadius": 8,
                  "height": 8,
                  "opacity": 0.4,
                  "width": 8,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
